--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>Sergii's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: #F4EEFF;">
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Sergii.png" alt="Web desigher Sergii profile photo"></td>
+      <td><img src="images/Sergii.png" alt="Web developer Sergii profile photo"></td>
       <td>
         <h1> Sergii Melnyk</h1>
         <p><em>Frontend developer and <strong><a href="https://www.facebook.com/media/set/?set=a.2724740714450786&type=3">3D designer</a></strong>.</em></p>
